# LuaCpp

./: .gitignore  CMakeLists.txt  LuaCpp.sh  README.md  makefile  premake4.lua
include/: luaState.h  luacfunc.h
include/application/: SDLApplication.h
include/lua/: luaState.h  luacfunc.h
include/utility/: ImageLdr.h  LogUtility.h  ResLdr.h
lua/: avg.lua
luacpp/: CMakeLists.txt
luacpp/include/lua/: luaState.h
src/: luaState.cpp  main.cpp
src/application/: SDLApplication.cpp
src/lua/: luaState.cpp
test/: CMakeLists.txt
